# kolokwium2

zad2/: CMakeLists.txt  Makefile  main.cpp
zad4/: CMakeLists.txt
